<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="question_australia">Canberra is the capital of Australia</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question_mideast">The Suez Canal connects the red Sea and the Indian Ocean</string>
    <string name="question_africa">The source of the Nile River is in Egypt</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake</string>
    <string name="finish">RESULTS</string>


    <string name="true_btn">TRUE</string>
    <string name="false_btn">FALSE</string>
    <string name="next_btn">NEXT</string>
    <string name="again_btn">TRY AGAIN</string>

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="attempt">attempts left</string>
    <string name="show_answer_btn">Show answer!</string>
    <string name="cheat_btn">Cheat!</string>
    <string name="judgement_toast">Cheating is wrong!</string>

</resources>